# RMUC_CV_2026_CPP

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  cmake_install.cmake  main.cpp  pf_debug.txt  run.sh
$(ALLUSERSPROFILE)/GenICam/xml/cache/: SchemaVersion.1.0@Hikrobot#U3V#MV-CS016-10UC#V2.2.0 240702 1311877@XMLVersion.1.0.0.md5
build-backlog/: ALL_BUILD.vcxproj  CMakeCache.txt  Makefile  ZERO_CHECK.vcxproj  calibur.sln  calibur.vcxproj  cmake_install.cmake  test.vcxproj  test_config.vcxproj  test_config.vcxproj.filters  test_send_data.vcxproj
build-backlog/.cmake/api/v1/reply/: cache-v2-3a4fd14fb1e4a824348b.json  cmakeFiles-v1-bc676556b221d26c571d.json  codemodel-v2-cba058f9546c4a09f46d.json  index-2025-11-13T10-16-44-0084.json  target-ALL_BUILD-MinSizeRel-aab213032a416fd744ea.json  target-calibur-Debug-5814ebd68deb259576c6.json  target-calibur-MinSizeRel-d64d075377d5895c91aa.json  target-calibur-RelWithDebInfo-c82a1d42948c94841d74.json  target-calibur-Release-aba4fea174135a93448b.json  target-opencv_calib3d-Debug-1acef132c496dfb12568.json  target-opencv_calib3d-MinSizeRel-c3efa6db7da8dda8d43f.json  target-opencv_core-Debug-c0e679679cb7e03e8a19.json  target-opencv_core-Release-32b4fe57546f4f69f307.json  target-opencv_dnn-Debug-716ac0c773d758f655b7.json  target-opencv_dnn-Release-1ba147e74b0f043fa393.json  target-opencv_features2d-Debug-eea08df588fe0142aefb.json  target-opencv_features2d-MinSizeRel-8d8212822e5e930e1493.json  target-opencv_flann-Debug-eca0025b2bf662e25993.json  target-opencv_flann-MinSizeRel-ca9e1f03728e8b0ddf88.json  target-opencv_gapi-Debug-7f9681a375a10446ade2.json  target-opencv_gapi-RelWithDebInfo-580a81776b830f877737.json  target-opencv_highgui-Debug-177ab82d3ba9c047c4d3.json  target-opencv_highgui-Release-dcfa29a6e5f67f71a388.json  target-opencv_imgcodecs-Debug-c75fbca5b554a88f34ea.json  target-opencv_imgcodecs-RelWithDebInfo-4401a639315cc8baeb12.json  target-opencv_imgproc-Debug-a314e4b7a8dafca929ae.json  target-opencv_imgproc-RelWithDebInfo-6b176610c68a074fd3cc.json  target-opencv_ml-Debug-0d8d9c834352cd40d856.json  target-opencv_ml-MinSizeRel-66461d5d2cc0cf2a4d79.json  target-opencv_objdetect-Debug-fcb0a68baaad9ab06e4c.json  target-opencv_objdetect-RelWithDebInfo-556d8e36286c6d0e8caf.json  target-opencv_photo-Debug-d8880a9e519436c6e489.json  target-opencv_photo-RelWithDebInfo-540fb4447b4cd4844352.json  target-opencv_stitching-Debug-6948d4ba43918b3d70ab.json  target-opencv_stitching-MinSizeRel-e45c782ff0bed6eef52e.json  target-opencv_video-Debug-1739f16e5d476f421f32.json  target-opencv_video-MinSizeRel-10b1693db3cd433026e3.json  target-opencv_videoio-Debug-4544333487abfe136514.json  target-opencv_videoio-MinSizeRel-33d4ed7be7c4a103cdbe.json  target-opencv_world-Debug-96835b570b19202093a2.json  (+13 more)
build-backlog/calibur.dir/Debug/calibur.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-backlog/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-backlog/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
calibur/: CMakeLists.txt  detection-classes.txt  predict.cpp  protocol_data.hpp  usb_communication.cpp  usb_communication.h
calibur/camera/: CMakeLists.txt  CameraParams.h  HikCamera.cpp  HikCamera.h  MvCameraControl.h  camera.cpp
calibur/imu/: CMakeLists.txt  imu_data.hpp  imu_reader.cpp  imu_reader.hpp
calibur/pf/: CMakeLists.txt  rbpf.cu  rbpf.cuh
calibur/pose/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
calibur/pose/include/: config.h  infer.h  public.h
calibur/pose/src/: infer.cpp
calibur/worker/: CMakeLists.txt  camera_worker.cpp  detection_worker.cpp  display_worker.cpp  helper.hpp  imu_worker.cpp  pf_worker.cpp  prediction_worker.cpp  types.hpp  usb_worker.cpp  workers.hpp  yolo_worker.cpp
tests/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calibur.sln  calibur.vcxproj  calibur.vcxproj.filters  cmake_install.cmake  test.vcxproj  test.vcxproj.filters  test_camera.cc  test_config.cc  test_config.vcxproj  test_config.vcxproj.filters  test_send_data.cc  test_send_data.vcxproj  test_send_data.vcxproj.filters  test_yolo.cc  test_yolo11.cc
